# HIEI-personal-trace

./: LICENSE  README.md  pyproject.toml
.github/release_notes/: .sourcesage_releasenotes_iris.yml
.github/setup/: github_add_collaborator.py  update_repo_name.py
.github/workflows/: publish-to-pypi.yml  sync-to-huggingface.yml
docs/: api.md  cli.md  usage.md
hiei/: __init__.py  cli.py
hiei/core/: __init__.py  clipboard.py  keylogger.py  monitor.py
hiei/processors/: activity.py  text.py
hiei/security/: encrypt.py  filter.py
hiei/storage/: database.py  local.py
hiei/utils/: helpers.py  logging.py
