[tool.poetry]
name = "hiei"
version = "0.1.0"
description = "PC作業の記録とLLMとの連携を実現する個人アシスタントツール"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hiei"}]

[tool.poetry.dependencies]
python = "^3.9"
pynput = "^1.7.6"  # キーロガー用
pyperclip = "^1.8.2"  # クリップボード監視用
python-dotenv = "^1.0.0"  # 環境変数管理
sqlalchemy = "^2.0.0"  # データベース操作
cryptography = "^41.0.0"  # 暗号化
pyyaml = "^6.0"  # 設定ファイル
rich = "^13.0.0"  # コンソール出力の装飾

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hiei = "hiei.cli:main"
